--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -244,7 +244,6 @@ header h2 {
   font-weight: bold;
   text-decoration: none;
   color: #ffffff;
-  transition: opacity 750ms linear 0.25s;
 }
 
 .actionicons {
@@ -253,6 +252,7 @@ header h2 {
 
 .button:hover {
   color: #00bfb2;
+  transition: 0.7s linear;
 }
 
 @media only screen and (max-width: 930px) {
